# cloudparse

./: CMakeLists.txt
cmake/: cloudparseConfig.cmake.in
